# version with ajax-method

--- a/src/pug/blog-items.pug
+++ b/src/pug/blog-items.pug
@@ -1,5 +1,5 @@
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image1.png', alt='post image')
+	img(src='./images/blog/blog-image1.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -13,9 +13,9 @@ figure.blog-info.ico-management
 		.text
 			span BlackBerry shares moved lower on Goldman's negative view, but traders should watch these
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management.cryptocurrency
-	img(src='../images/blog/blog-image2.png', alt='post image')
+	img(src='./images/blog/blog-image2.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -29,9 +29,9 @@ figure.blog-info.ico-management.cryptocurrency
 		.text
 			span The video streaming service acquired a comic book publisher in a move to bolster its content portfolio.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image3.png', alt='post image')
+	img(src='./images/blog/blog-image3.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -45,9 +45,9 @@ figure.blog-info.ico-management
 		.text
 			span From a slice of pizza to $50 billion. How Bitcoin has outpaced these four companies
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image4.png', alt='post image')
+	img(src='./images/blog/blog-image4.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -61,9 +61,9 @@ figure.blog-info.ico-management
 		.text
 			span Bank stocks will be fueled by huge stock buybacks and dividend hikes, Goldman says
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image5.png', alt='post image')
+	img(src='./images/blog/blog-image5.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -77,9 +77,9 @@ figure.blog-info.ico-management
 		.text
 			span The two struck a deal in which Chinese consumers can book a stay via Alibaba and Alipay.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management.cryptocurrency
-	img(src='../images/blog/blog-image6.png', alt='post image')
+	img(src='./images/blog/blog-image6.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -93,9 +93,9 @@ figure.blog-info.ico-management.cryptocurrency
 		.text
 			span The technology sector is outperforming the broader market but can still soar over the next few months.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image7.png', alt='post image')
+	img(src='./images/blog/blog-image7.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -109,9 +109,9 @@ figure.blog-info.ico-management
 		.text
 			span Goldman Sachs is out with a report showing the importance of capex spending.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image8.png', alt='post image')
+	img(src='./images/blog/blog-image8.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -125,9 +125,9 @@ figure.blog-info.ico-management
 		.text
 			span There is another Dow ETF that income investors may want to consider.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image9.png', alt='post image')
+	img(src='./images/blog/blog-image9.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -141,9 +141,9 @@ figure.blog-info.ico-management
 		.text
 			span Disney is well positioned for a buy-the-news reaction to this week's earnings report, despite a tough second quarter.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management.cryptocurrency
-	img(src='../images/blog/blog-image10.png', alt='post image')
+	img(src='./images/blog/blog-image10.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -157,9 +157,9 @@ figure.blog-info.ico-management.cryptocurrency
 		.text
 			span Nvidia stock could soar to $200 if its forthcoming 2Q financial results blow away street estimates.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image11.png', alt='post image')
+	img(src='./images/blog/blog-image11.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -173,9 +173,9 @@ figure.blog-info.ico-management
 		.text
 			span Fees matter with ETFs, and that also pertains to gold ETFs.
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
 figure.blog-info.ico-management
-	img(src='../images/blog/blog-image12.png', alt='post image')
+	img(src='./images/blog/blog-image12.png', alt='post image')
 	figcaption
 		.date
 			.date-wrapper
@@ -189,4 +189,4 @@ figure.blog-info.ico-management
 		.text
 			span As Bitcoin and other cryptocurrencies expand, hackers see new potential for thefts. How do you keep your digital
 		.button-wrapper.clearfix
-			a.button(href='javascript:void(0)') Read
+			a.button(href='news-post.html', data-type='page-transition') Read
