--- a/src/pug/contact-us.pug
+++ b/src/pug/contact-us.pug
@@ -1,7 +1,7 @@
 extends layouts/_default
 
 block vars
-	- page = { name: 'index', count: '', title: '' }
+	- page = { name: 'contact', title: '' }
 
 block header
 	include partials/_header
@@ -10,7 +10,7 @@ block sidebar
 	include partials/_sidebar
 
 block main
-	include pages/index/_main
+	include pages/contact-us/_main
 
 block footer
 	include partials/_footer
