--- a/src/scss/_plugins.scss
+++ b/src/scss/_plugins.scss
@@ -9,6 +9,6 @@
 /* Owl theme */
 @import "../assets/plugins/owl.carousel/dist/assets/owl.theme.default.min.css";
 /* Full Page */
-@import "../assets/plugins/fullPage.js/dist/jquery.fullpage.min.css";
+//@import "../assets/plugins/fullPage.js/dist/jquery.fullpage.min.css";
 /* Customizing styles */
 @import "../assets/plugins/base-sizing.css";
